Show Login Available Validation State

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
 
     <string name="login_indicator_idle">Idle</string>
     <string name="login_indicator_loading">Loading</string>
+    <string name="login_indicator_available">Available</string>
 </resources>
