Show Login Taken When Api Returns That It Is Taken

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="login_indicator_idle">Idle</string>
     <string name="login_indicator_loading">Loading</string>
     <string name="login_indicator_available">Available</string>
+    <string name="login_indicator_taken">Taken</string>
 </resources>
