--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="login_indicator_loading">Loading</string>
     <string name="login_indicator_available">Available</string>
     <string name="login_indicator_taken">Taken</string>
+    <string name="login_indicator_error">Error</string>
 </resources>
