--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="login_indicator_available">Available</string>
     <string name="login_indicator_taken">Taken</string>
     <string name="login_indicator_error">Error</string>
+    <string name="take_photo">Take photo</string>
 </resources>
